--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,6 @@ authors = ["azeredo-e <eduardo.aeredo99@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
